--- a/about.html
+++ b/about.html
@@ -3,15 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>自己紹介 - Hiroko Kennedy</title>
+  <link rel="stylesheet" href="indexstyles.css">
 </head>
 <body>
-  <h1>Hiroko Kennedy</h1>
-  <p>こんにちは！私はデザインとプログラミングが好きです。</p>
-  <h2>ポートフォリオ</h2>
-  <ul>
-    <li><a href="portfolio1.html">作品1</a></li>
-    <li><a href="portfolio2.html">作品2</a></li>
-    <li><a href="portfolio3.html">作品3</a></li>
-  </ul>
+  <header>
+    <h1>Hiroko Kennedy</h1>
+    <p>こんにちは！私はデザインとプログラミングが好きです。</p>
+  </header>
+
+  <section class="portfolio">
+    <h2>ポートフォリオ</h2>
+    <ul>
+      <li><a href="portfolio1.html">作品1</a></li>
+      <li><a href="portfolio2.html">作品2</a></li>
+      <li><a href="portfolio3.html">作品3</a></li>
+    </ul>
+  </section>
 </body>
 </html>
