--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <section class="portfolio">
     <h2>ポートフォリオ</h2>
     <ul>
-      <li><a href="portfolio1.html">作品1</a></li>
+      <li><a href="food-survey.html">作品1</a></li>
       <li><a href="portfolio2.html">作品2</a></li>
       <li><a href="portfolio3.html">作品3</a></li>
     </ul>
