--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>ポートフォリオ</h2>
     <ul>
       <li><a href="food-survey.html">作品1</a></li>
-      <li><a href="portfolio2.html">作品2</a></li>
+      <li><a href="Hayao-miyazaki-tribute-page.html">作品2</a></li>
       <li><a href="portfolio3.html">作品3</a></li>
     </ul>
   </section>
