--- a/Hayao-miyazaki-tribute-page.html
+++ b/Hayao-miyazaki-tribute-page.html
@@ -19,8 +19,8 @@
       <figure id="img-div">
         <img
           id="image"
-          scr="hayao.jp"
-          alt="Hayao Miyazaki smiling in a garden."
+          scr="Hyao-miyazaki-pic"
+          alt="Hayao Miyazaki smiling in a office."
         />
         <figcaption id="img-caption">
           Hayao Miyazaki in a peaceful natural setting.
