--- a/Hayao-miyazaki-tribute-page.html
+++ b/Hayao-miyazaki-tribute-page.html
@@ -19,7 +19,7 @@
       <figure id="img-div">
         <img
           id="image"
-          scr="Hyao-miyazaki-pic"
+          scr="Hyao-miyazaki-pic.png"
           alt="Hayao Miyazaki smiling in a office."
         />
         <figcaption id="img-caption">
