--- a/Hayao-miyazaki-tribute-page.html
+++ b/Hayao-miyazaki-tribute-page.html
@@ -19,7 +19,7 @@
       <figure id="img-div">
         <img
           id="image"
-          scr="Hyao-miyazaki-pic.png"
+          scr="https://github.com/hirokenno/portfolio/blob/fee1053a20148e5ca029b426bc4d5cbccac37b8e/Hyao-miyazaki-pic.png"
           alt="Hayao Miyazaki smiling in a office."
         />
         <figcaption id="img-caption">
