--- a/Hayao-miyazaki-tribute-page.html
+++ b/Hayao-miyazaki-tribute-page.html
@@ -17,11 +17,9 @@
         <a href="#section2">Famous Works</a>
       </nav>
       <figure id="img-div">
-        <img
-          id="image"
+        <img id="image"
           scr="https://github.com/hirokenno/portfolio/blob/fee1053a20148e5ca029b426bc4d5cbccac37b8e/Hyao-miyazaki-pic.png"
-          alt="Hayao Miyazaki smiling in a office."
-        />
+          alt="Hayao Miyazaki smiling in a office."/>
         <figcaption id="img-caption">
           Hayao Miyazaki in a peaceful natural setting.
         </figcaption>
