--- a/Hayao-miyazaki-tribute-page.html
+++ b/Hayao-miyazaki-tribute-page.html
@@ -18,7 +18,7 @@
       </nav>
       <figure id="img-div">
         <img id="image"
-          scr="https://github.com/hirokenno/portfolio/blob/fee1053a20148e5ca029b426bc4d5cbccac37b8e/Hyao-miyazaki-pic.png"
+          src="https://github.com/hirokenno/portfolio/blob/fee1053a20148e5ca029b426bc4d5cbccac37b8e/Hyao-miyazaki-pic.png"
           alt="Hayao Miyazaki smiling in a office."/>
         <figcaption id="img-caption">
           Hayao Miyazaki in a peaceful natural setting.
